--- a/natours/index.html
+++ b/natours/index.html
@@ -20,8 +20,10 @@
           <div class="text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary-main">Outdoors</span>
-                <span class="heading-primary-sub">is where Life Happens</span>
-            </h1>
+                <span class="heading-primary-sub">is where Life Happens</span>                
+            
+            </h1>            
+            <a href="#section-tours" class="btn btn-white btn-animated">Discover our tours</a>            
           </div>
           
         </header>
